set up dashboard

--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -1,3 +1,5 @@
 @import "~bootstrap/scss/functions";  // 載入 bootstrap 套用變數的方法
 @import "./helpers/_variables";       // 有套用方法，此客製化的變數才能正確啟用
 @import "~bootstrap/scss/bootstrap";
+
+@import "./dashboard";                // 載入 dashboard 的 scss
